--- a/web/themes/backend/views/layouts/main.twig
+++ b/web/themes/backend/views/layouts/main.twig
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/next.index.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/Ext.ux.index.form.Form.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/Ext.ux.index.form.TitleEditPanel.css">
-    <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/js/ext-ux/DataView/data-view.css">
+    <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/data-view.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/js/ext-ux/grid/css/GridFilters.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/js/ext-ux/grid/css/RangeMenu.css">
     <script type="text/javascript" src="{{ urlTo('@theme') }}/js/ext/ext-all-debug-w-comments.js"></script>
