Модуль files, интерфейсы управления файлами, поле типа file. Далее: поле img, RelatedListsEditor

--- a/web/themes/backend/views/layouts/main.twig
+++ b/web/themes/backend/views/layouts/main.twig
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/next.index.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/Ext.ux.index.form.Form.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/Ext.ux.index.form.TitleEditPanel.css">
+    <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/Ext.ux.form.field.FileField.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/css/data-view.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/js/ext-ux/grid/css/GridFilters.css">
     <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme') }}/js/ext-ux/grid/css/RangeMenu.css">
