Поправил небольшой баг с trigger field

--- a/index.next/modules/backend/assets/css/Ext.ux.index.form.Form.css
+++ b/index.next/modules/backend/assets/css/Ext.ux.index.form.Form.css
@@ -85,3 +85,7 @@
 .in2-editor-form-toolbar-tab-form {
     background: #ffffff url("../images/extOverride/h-devider-single.png") repeat-x left bottom;
 }
+
+.in2-editor-form .x-trigger-cell {
+    font-size: 1px;
+}
