--- a/www/themes/frontend/views/layouts/main.twig
+++ b/www/themes/frontend/views/layouts/main.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
-    <title>{{ title }}</title>
+    <title>{{ data.meta_title }}</title>
 </head>
 <body>
 {% block content %}
