--- a/www/themes/frontend/views/layouts/main.twig
+++ b/www/themes/frontend/views/layouts/main.twig
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
-    <title>{{ data.meta_title }}</title>
+    {% include '@themeroot/views/include/header.twig' %}
 </head>
 <body>
-{% block content %}
-{% endblock %}
+<div class="container">
+    {{ use('app/modules/site/widgets') }}
+    {{ main_menu_widget() }}
+
+    <div class="jumbotron">
+        <h1>{{ data.title }}</h1>
+        {% block content %}
+        {% endblock %}
+        {% include '@themeroot/views/include/bodyEnd.twig' %}
+    </div>
+
+</div>
 </body>
 </html>
