Пара мелких багов + хлебные крошки

--- a/www/themes/frontend/views/layouts/main.twig
+++ b/www/themes/frontend/views/layouts/main.twig
@@ -4,17 +4,19 @@
     {% include '@themeroot/views/include/header.twig' %}
 </head>
 <body>
-<div class="container">
-    {{ use('app/modules/site/widgets') }}
-    {{ main_menu_widget() }}
+    <div class="container">
+        {{ use('app/modules/site/widgets') }}
+        {{ main_menu_widget() }}
 
-    <div class="jumbotron">
-        <h1>{{ data.title }}</h1>
-        {% block content %}
-        {% endblock %}
-        {% include '@themeroot/views/include/bodyEnd.twig' %}
+        <div class="jumbotron">
+            {{ use('app/modules/site/widgets') }}
+            {{ bread_crumbs_widget() }}
+            <h1>{{ data.title }}</h1>
+            {% block content %}
+            {% endblock %}
+            {% include '@themeroot/views/include/bodyEnd.twig' %}
+        </div>
+
     </div>
-
-</div>
 </body>
 </html>
