--- a/www/themes/frontend/views/include/header.twig
+++ b/www/themes/frontend/views/include/header.twig
@@ -1,5 +1,7 @@
 <meta charset="utf-8">
 <title>{{ data.meta_title ? data.meta_title : data.title}}</title>
+<meta name="description" content="{{ data.meta_description}}" />
+<meta name="keywords" content="{{ data.meta_keywords}}" />
 <link rel="stylesheet" type="text/css" href="{{ urlTo('@theme/css/bootstrap.min.css') }}" />
 
 <style>
