--- a/www/themes/frontend/views/site/views/default/index.twig
+++ b/www/themes/frontend/views/site/views/default/index.twig
@@ -1,5 +1,5 @@
 {# @title Главная страница #}
 {% extends '@themelayouts/main.twig' %}
 {% block content %}
-    {{ data.text }} <br>
+    {{ data.text }}
 {% endblock %}
