Поправил вывод списка новостей - не выводились данные раздела, в частности мета теги

--- a/www/themes/base/views/news/views/default/index.twig
+++ b/www/themes/base/views/news/views/default/index.twig
@@ -1,7 +1,7 @@
 {# @title Страница новостей #}
 {% extends '@themelayouts/main.twig' %}
 {% block content %}
-    {% for item in data %}
+    {% for item in list %}
         <div style="padding-bottom: 20px">
             <a href="{{ url('/news/default/index', {"id" : item.id}) }}"><b>[{{ item.date|date('d.m.Y') }}]</b> {{ item.title }}</a><br/>
             {{ item.anons }}
