Новая тестовая тема. Маленький баг в базовом классе виджета

--- a/www/themes/base/views/news/views/default/index.twig
+++ b/www/themes/base/views/news/views/default/index.twig
@@ -1,5 +1,5 @@
 {# @title Страница новостей #}
-{% extends '@themelayouts/main.twig' %}
+{% extends '@themelayouts/news.twig' %}
 {% block content %}
     {% for item in list %}
         <div style="padding-bottom: 20px">
