--- a/www/themes/base/views/site/views/default/index.twig
+++ b/www/themes/base/views/site/views/default/index.twig
@@ -1,5 +1,5 @@
-{# @title Главная страница #}
-{% extends '@themelayouts/main.twig' %}
+{# @title Внутренняя текстовая страница #}
+{% extends '@themelayouts/TextPage.twig' %}
 {% block content %}
     {{ data.text }}
 {% endblock %}
