--- a/www/themes/base/views/include/header.twig
+++ b/www/themes/base/views/include/header.twig
@@ -1,24 +1,21 @@
 <meta charset="utf-8">
-<title>{{ data.meta_title ? data.meta_title : data.title}}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ data.meta_description}}" />
 <meta name="keywords" content="{{ data.meta_keywords}}" />
-<link rel="stylesheet" type="text/css" href="{{ urlTo('@theme/css/bootstrap.min.css') }}" />
-
-<style>
-    #wrapper {
-        max-width: 960px;
-        margin: auto;
-    }
-    header {
-        padding: 20px 0;
-    }
-    body {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    .navbar {
-        margin-bottom: 20px;
-    }
-
-</style>
+<meta name="author" content="index.art LLC http://index-art.ru">
+<title>{{ data.meta_title ? data.meta_title : data.title}}</title>
+<link href="{{ urlTo('@theme/css/bootstrap.min.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/font-awesome.min.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/prettyPhoto.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/price-range.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/animate.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/main.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/responsive.css') }}" rel="stylesheet">
+<!--[if lt IE 9]>
+<script src="{{ urlTo('@theme/js/html5shiv.js') }}"></script>
+<script src="{{ urlTo('@theme/js/respond.min.js') }}"></script>
+<![endif]-->
+<link rel="shortcut icon" href="{{ urlTo('@theme/images/ico/favicon.ico') }}">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ urlTo('@theme/images/ico/apple-touch-icon-114-precomposed.png') }}">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ urlTo('@theme/images/ico/apple-touch-icon-72-precomposed.png') }}">
+<link rel="apple-touch-icon-precomposed" href="{{ urlTo('@theme/images/ico/apple-touch-icon-57-precomposed.png') }}">
