--- a/www/themes/base/views/news/views/default/item.twig
+++ b/www/themes/base/views/news/views/default/item.twig
@@ -1,5 +1,5 @@
 {# @title Страница одной новости #}
-{% extends '@themelayouts/main.twig' %}
+{% extends '@themelayouts/news.twig' %}
 {% block content %}
     <div style="font-size: 0.8em; font-style: italic; padding: 20px 0">[{{ data.date|date('d.m.Y') }}]</div>
     {{ data.text }}
