--- a/www/themes/base/views/layouts/TextPage.twig
+++ b/www/themes/base/views/layouts/TextPage.twig
@@ -219,5 +219,6 @@
 <script src="js/jquery.scrollUp.min.js"></script>
 <script src="js/jquery.prettyPhoto.js"></script>
 <script src="js/main.js"></script>
+{{ end_body() }}
 </body>
 </html>
