--- a/www/themes/base/views/layouts/main.twig
+++ b/www/themes/base/views/layouts/main.twig
@@ -952,5 +952,6 @@
 <script src="js/price-range.js"></script>
 <script src="js/jquery.prettyPhoto.js"></script>
 <script src="js/main.js"></script>
+{{ end_body() }}
 </body>
 </html>
