Ошибка в обработчике ошибок :D

--- a/www/themes/base/views/site/views/default/404.twig
+++ b/www/themes/base/views/site/views/default/404.twig
@@ -1,4 +1,4 @@
-{# @title Внутренняя текстовая страница #}
+{# @title Страница ошибки 404 #}
 {% extends '@themelayouts/TextPage.twig' %}
 {% block content %}
     Ошибка 404
