--- a/www/themes/base/views/include/header.twig
+++ b/www/themes/base/views/include/header.twig
@@ -7,3 +7,4 @@
 
 <link href="{{ urlTo('@theme/css/bootstrap.min.css') }}" rel="stylesheet">
 <link href="{{ urlTo('@theme/css/custom.css') }}" rel="stylesheet">
+<link href="{{ urlTo('@theme/css/bootstrap-slider.css') }}" rel="stylesheet">
