--- a/www/themes/base/views/include/js.twig
+++ b/www/themes/base/views/include/js.twig
@@ -1,5 +1,8 @@
 <script src="{{ urlTo('@theme/js/jquery-2.1.4.min.js') }}"></script>
 <script src="{{ urlTo('@theme/js/bootstrap.min.js') }}"></script>
+<script src="{{ urlTo('@theme/js/bootstrap-slider.js') }}"></script>
+
+<script src="{{ urlTo('@theme/js/site.js') }}"></script>
 
 <script type="text/javascript">
     $(".copyr img").on("mouseover",function(event)
