--- a/www/themes/base/css/bootstrap-slider.css
+++ b/www/themes/base/css/bootstrap-slider.css
@@ -29,7 +29,7 @@
   position: relative;
 }
 .slider.slider-horizontal {
-  width: 210px;
+  width: 100%;
   height: 20px;
 }
 .slider.slider-horizontal .slider-track {
@@ -48,8 +48,13 @@
 }
 .slider.slider-horizontal .slider-tick,
 .slider.slider-horizontal .slider-handle {
-  margin-left: -10px;
   margin-top: -5px;
+}
+.min-slider-handle {
+  margin-left: 0;
+}
+.max-slider-handle {
+  margin-left: -10px;
 }
 .slider.slider-horizontal .slider-tick.triangle,
 .slider.slider-horizontal .slider-handle.triangle {
