--- a/www/themes/base/views/catalog/views/default/category.twig
+++ b/www/themes/base/views/catalog/views/default/category.twig
@@ -36,34 +36,50 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-4 hidden-xs hidden-sm">
+        <div class="col-md-offset-1 col-md-3 hidden-xs hidden-sm">
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-md-6 control-label">Цена</label>
-                    <div class="col-md-6">
-                        <input catalogFilter="property" name="price" class="rangeSlider" value="" data-slider-min="{{ data.minPrice }}" data-slider-max="{{ data.maxPrice }}" data-slider-step="{{ ((data.maxPrice - data.minPrice) / 20)|round}}" data-slider-value="[{{ data.minPrice }},{{ data.maxPrice }}]"/>
+                    <label class="control-label">Цена</label>
+                    <div>
+                        <input catalogFilter="property" name="price" class="rangeSlider" value="" data-slider-min="{{ data.minPrice }}" data-slider-max="{{ data.maxPrice }}" data-slider-step="{{ ((data.maxPrice - data.minPrice) / 20)|round}}" data-slider-value="[{% if not data.minPriceInFilter %}{{ data.minPrice }}{% else %}{{ data.minPriceInFilter }}{% endif %},{% if not data.maxPriceInFilter %}{{ data.maxPrice }}{% else %}{{ data.maxPriceInFilter }}{% endif %}]"/>
                     </div>
+                    <label class="control-label">Производитель</label>
+                    {% for item in data.brands %}
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" catalogFilter="property" name="brand" url="{{ item.url }}" {% if data.isBrandSelectInFilter(item.url) %} checked="checked" {% endif %}> {{ item.title }}
+                            </label>
+                        </div>
+                    {% endfor %}
                 </div>
-                {% for item in data.params %}
+                {% for item in data.filterParams %}
                     <div class="form-group">
-                        <label class="col-md-6 control-label">{{ item.title }}</label>
-                        <div class="col-md-6">
-                            {% if item.type == 'int' %}
-                                <input catalogFilter="param" name="{{ item.url }}" class="rangeSlider" value="" data-slider-min="{{ data.minPrice }}" data-slider-max="{{ data.maxPrice }}" data-slider-step="{{ ((data.maxPrice - data.minPrice) / 20)|round}}" data-slider-value="[{{ data.minPrice }},{{ data.maxPrice }}]"/>
-                            {% elseif item.type == 'float' %}
-                                <input catalogFilter="param" name="{{ item.url }}" class="rangeSlider" value="" data-slider-min="{{ data.minPrice }}" data-slider-max="{{ data.maxPrice }}" data-slider-step="{{ ((data.maxPrice - data.minPrice) / 20)|round(2)}}" data-slider-value="[{{ data.minPrice }},{{ data.maxPrice }}]"/>
+                        <label class="control-label">{{ item.title }}</label>
+                        <div>
+                            {% if item.type == 'int' or item.type == 'float' %}
+                                <input catalogFilter="param" paramType="{{ item.type }}" name="{{ item.url }}" class="rangeSlider" value="" data-slider-min="{{ item.minValue }}" data-slider-max="{{ item.maxValue }}" data-slider-step="{{ ((item.minValue - item.maxValue) / 20)|round(2)}}" data-slider-value="[{{ data.getMinParamValueInFilter(item) ? data.getMinParamValueInFilter(item) : item.minValue }},{{ data.getMaxParamValueInFilter(item) ? data.getMaxParamValueInFilter(item) : item.maxValue }}]"/>
                             {% elseif item.type == 'string' %}
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" catalogFilter="param" name="{{ item.url }}"> Checkbox
-                                    </label>
-                                </div>
-
-                                <input catalogFilter="param" name="{{ item.url }}" class="rangeSlider" value="" data-slider-min="{{ data.minPrice }}" data-slider-max="{{ data.maxPrice }}" data-slider-step="{{ ((data.maxPrice - data.minPrice) / 20)|round(2)}}" data-slider-value="[{{ data.minPrice }},{{ data.maxPrice }}]"/>
+                                {% for paramValue in item.allStringValues %}
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" catalogFilter="param" paramType="{{ item.type }}" url="{{ paramValue.val_string }}" name="{{ item.url }}" {{ data.isParamSelectInFilter(item, paramValue.val_string) ? 'checked="checked"' : '' }}> {{ paramValue.val_string }}
+                                        </label>
+                                    </div>
+                                {% endfor %}
+                            {% elseif item.type == 'select' %}
+                                {% for paramValue in item.allSelectValues %}
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" catalogFilter="param" paramType="{{ item.type }}" url="{{ paramValue.valof_val_select.url }}" name="{{ item.url }}" {{ data.isParamSelectInFilter(item, paramValue.valof_val_select.url) ? 'checked="checked"' : '' }}> {{ paramValue.valof_val_select.title }}
+                                        </label>
+                                    </div>
+                                {% endfor %}
                             {% endif %}
                         </div>
                     </div>
                 {% endfor %}
+
+                <a href="#" class="btn btn-default" id="apply-goods-params" url="{{ url('/catalog/default/category', {'url': data.fullUrl}) }}">Подобрать</a>
             </form>
         </div>
     </div>
